adding mean profiling method

--- a/Ljosa-mean/data_explore.ipynb
+++ b/Ljosa-mean/data_explore.ipynb
@@ -2,16 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "os.chdir(\"/home/user/michigan/data/Ljosa-BBBC021/database\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,44 +47,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "meta = Image[[\"TableNumber\",\"ImageNumber\",\"Image_Metadata_Plate_DAPI\",\"Image_Metadata_Well_DAPI\"]]"
+    "meta = Image[[\"TableNumber\",\"ImageNumber\",\"Image_Metadata_Plate_DAPI\",\"Image_Metadata_Well_DAPI\",\"Image_Metadata_Compound\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TableNumber</th>\n",
+       "      <th>ImageNumber</th>\n",
+       "      <th>Image_Metadata_Plate_DAPI</th>\n",
+       "      <th>Image_Metadata_Well_DAPI</th>\n",
+       "      <th>Image_Metadata_Compound</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Week1_22123</td>\n",
+       "      <td>B04</td>\n",
+       "      <td>cytochalasin B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Week1_22123</td>\n",
+       "      <td>B04</td>\n",
+       "      <td>cytochalasin B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Week1_22123</td>\n",
+       "      <td>B04</td>\n",
+       "      <td>cytochalasin B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Week1_22123</td>\n",
+       "      <td>B04</td>\n",
+       "      <td>cytochalasin B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>251</td>\n",
+       "      <td>Week1_22141</td>\n",
+       "      <td>B04</td>\n",
+       "      <td>cytochalasin B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2523</th>\n",
+       "      <td>9</td>\n",
+       "      <td>3560</td>\n",
+       "      <td>Week9_39301</td>\n",
+       "      <td>F11</td>\n",
+       "      <td>DMSO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2524</th>\n",
+       "      <td>9</td>\n",
+       "      <td>3597</td>\n",
+       "      <td>Week9_39301</td>\n",
+       "      <td>G11</td>\n",
+       "      <td>DMSO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2525</th>\n",
+       "      <td>9</td>\n",
+       "      <td>3598</td>\n",
+       "      <td>Week9_39301</td>\n",
+       "      <td>G11</td>\n",
+       "      <td>DMSO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2526</th>\n",
+       "      <td>9</td>\n",
+       "      <td>3599</td>\n",
+       "      <td>Week9_39301</td>\n",
+       "      <td>G11</td>\n",
+       "      <td>DMSO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2527</th>\n",
+       "      <td>9</td>\n",
+       "      <td>3600</td>\n",
+       "      <td>Week9_39301</td>\n",
+       "      <td>G11</td>\n",
+       "      <td>DMSO</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2528 rows × 5 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Microtubule destabilizers    14\n",
-       "Eg5 inhibitors               12\n",
-       "Aurora kinase inhibitors     12\n",
-       "DNA damage                    9\n",
-       "Microtubule stabilizers       9\n",
-       "DNA replication               8\n",
-       "Epithelial                    8\n",
-       "Protein synthesis             8\n",
-       "Protein degradation           7\n",
-       "Cholesterol-lowering          6\n",
-       "Actin disruptors              5\n",
-       "Kinase inhibitors             5\n",
-       "DMSO                          1\n",
-       "Name: moa, dtype: int64"
+       "      TableNumber  ImageNumber Image_Metadata_Plate_DAPI  \\\n",
+       "0               1           11               Week1_22123   \n",
+       "1               1           12               Week1_22123   \n",
+       "2               1            9               Week1_22123   \n",
+       "3               1           10               Week1_22123   \n",
+       "4               1          251               Week1_22141   \n",
+       "...           ...          ...                       ...   \n",
+       "2523            9         3560               Week9_39301   \n",
+       "2524            9         3597               Week9_39301   \n",
+       "2525            9         3598               Week9_39301   \n",
+       "2526            9         3599               Week9_39301   \n",
+       "2527            9         3600               Week9_39301   \n",
+       "\n",
+       "     Image_Metadata_Well_DAPI Image_Metadata_Compound  \n",
+       "0                         B04          cytochalasin B  \n",
+       "1                         B04          cytochalasin B  \n",
+       "2                         B04          cytochalasin B  \n",
+       "3                         B04          cytochalasin B  \n",
+       "4                         B04          cytochalasin B  \n",
+       "...                       ...                     ...  \n",
+       "2523                      F11                    DMSO  \n",
+       "2524                      G11                    DMSO  \n",
+       "2525                      G11                    DMSO  \n",
+       "2526                      G11                    DMSO  \n",
+       "2527                      G11                    DMSO  \n",
+       "\n",
+       "[2528 rows x 5 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "GroundTruth[\"moa\"].value_counts()"
+    "meta"
    ]
   },
   {
