--- a/Ljosa-profile/data_explore.ipynb
+++ b/Ljosa-profile/data_explore.ipynb
@@ -47,16 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
-    "meta = Image[[\"TableNumber\",\"ImageNumber\",\"Image_Metadata_Plate_DAPI\",\"Image_Metadata_Well_DAPI\",\"Image_Metadata_Compound\"]]"
+    "meta = Image[[\"TableNumber\",\"ImageNumber\",\"Image_Metadata_Plate_DAPI\",\"Image_Metadata_Well_DAPI\",\"Image_Metadata_Compound\",\"Image_Metadata_Concentration\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -80,175 +80,177 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>TableNumber</th>\n",
-       "      <th>ImageNumber</th>\n",
-       "      <th>Image_Metadata_Plate_DAPI</th>\n",
-       "      <th>Image_Metadata_Well_DAPI</th>\n",
        "      <th>Image_Metadata_Compound</th>\n",
+       "      <th>Image_Metadata_Plate_DAPI</th>\n",
+       "      <th>Image_Metadata_Concentration</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>11</td>\n",
-       "      <td>Week1_22123</td>\n",
-       "      <td>B04</td>\n",
        "      <td>cytochalasin B</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>12</td>\n",
        "      <td>Week1_22123</td>\n",
-       "      <td>B04</td>\n",
-       "      <td>cytochalasin B</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Week1_22123</td>\n",
-       "      <td>B04</td>\n",
-       "      <td>cytochalasin B</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Week1_22123</td>\n",
-       "      <td>B04</td>\n",
-       "      <td>cytochalasin B</td>\n",
+       "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>251</td>\n",
-       "      <td>Week1_22141</td>\n",
-       "      <td>B04</td>\n",
        "      <td>cytochalasin B</td>\n",
+       "      <td>Week1_22141</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>cytochalasin B</td>\n",
+       "      <td>Week1_22161</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>cytochalasin B</td>\n",
+       "      <td>Week1_22123</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>cytochalasin B</td>\n",
+       "      <td>Week1_22141</td>\n",
+       "      <td>30.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2523</th>\n",
-       "      <td>9</td>\n",
-       "      <td>3560</td>\n",
-       "      <td>Week9_39301</td>\n",
-       "      <td>F11</td>\n",
+       "      <th>2408</th>\n",
        "      <td>DMSO</td>\n",
+       "      <td>Week9_39221</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2524</th>\n",
-       "      <td>9</td>\n",
-       "      <td>3597</td>\n",
-       "      <td>Week9_39301</td>\n",
-       "      <td>G11</td>\n",
+       "      <th>2432</th>\n",
        "      <td>DMSO</td>\n",
+       "      <td>Week9_39222</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2525</th>\n",
-       "      <td>9</td>\n",
-       "      <td>3598</td>\n",
-       "      <td>Week9_39301</td>\n",
-       "      <td>G11</td>\n",
+       "      <th>2456</th>\n",
        "      <td>DMSO</td>\n",
+       "      <td>Week9_39282</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2526</th>\n",
-       "      <td>9</td>\n",
-       "      <td>3599</td>\n",
-       "      <td>Week9_39301</td>\n",
-       "      <td>G11</td>\n",
+       "      <th>2480</th>\n",
        "      <td>DMSO</td>\n",
+       "      <td>Week9_39283</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2527</th>\n",
-       "      <td>9</td>\n",
-       "      <td>3600</td>\n",
-       "      <td>Week9_39301</td>\n",
-       "      <td>G11</td>\n",
+       "      <th>2504</th>\n",
        "      <td>DMSO</td>\n",
+       "      <td>Week9_39301</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2528 rows × 5 columns</p>\n",
+       "<p>357 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      TableNumber  ImageNumber Image_Metadata_Plate_DAPI  \\\n",
-       "0               1           11               Week1_22123   \n",
-       "1               1           12               Week1_22123   \n",
-       "2               1            9               Week1_22123   \n",
-       "3               1           10               Week1_22123   \n",
-       "4               1          251               Week1_22141   \n",
-       "...           ...          ...                       ...   \n",
-       "2523            9         3560               Week9_39301   \n",
-       "2524            9         3597               Week9_39301   \n",
-       "2525            9         3598               Week9_39301   \n",
-       "2526            9         3599               Week9_39301   \n",
-       "2527            9         3600               Week9_39301   \n",
+       "     Image_Metadata_Compound Image_Metadata_Plate_DAPI  \\\n",
+       "0             cytochalasin B               Week1_22123   \n",
+       "4             cytochalasin B               Week1_22141   \n",
+       "8             cytochalasin B               Week1_22161   \n",
+       "12            cytochalasin B               Week1_22123   \n",
+       "16            cytochalasin B               Week1_22141   \n",
+       "...                      ...                       ...   \n",
+       "2408                    DMSO               Week9_39221   \n",
+       "2432                    DMSO               Week9_39222   \n",
+       "2456                    DMSO               Week9_39282   \n",
+       "2480                    DMSO               Week9_39283   \n",
+       "2504                    DMSO               Week9_39301   \n",
        "\n",
-       "     Image_Metadata_Well_DAPI Image_Metadata_Compound  \n",
-       "0                         B04          cytochalasin B  \n",
-       "1                         B04          cytochalasin B  \n",
-       "2                         B04          cytochalasin B  \n",
-       "3                         B04          cytochalasin B  \n",
-       "4                         B04          cytochalasin B  \n",
-       "...                       ...                     ...  \n",
-       "2523                      F11                    DMSO  \n",
-       "2524                      G11                    DMSO  \n",
-       "2525                      G11                    DMSO  \n",
-       "2526                      G11                    DMSO  \n",
-       "2527                      G11                    DMSO  \n",
+       "      Image_Metadata_Concentration  \n",
+       "0                             10.0  \n",
+       "4                             10.0  \n",
+       "8                             10.0  \n",
+       "12                            30.0  \n",
+       "16                            30.0  \n",
+       "...                            ...  \n",
+       "2408                           0.0  \n",
+       "2432                           0.0  \n",
+       "2456                           0.0  \n",
+       "2480                           0.0  \n",
+       "2504                           0.0  \n",
        "\n",
-       "[2528 rows x 5 columns]"
+       "[357 rows x 3 columns]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "meta"
+    "meta[[\"Image_Metadata_Compound\",\"Image_Metadata_Plate_DAPI\",\"Image_Metadata_Concentration\"]].drop_duplicates()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0       cytochalasin B\n",
-       "1       cytochalasin B\n",
-       "2       cytochalasin B\n",
-       "3       cytochalasin B\n",
-       "4       cytochalasin B\n",
-       "             ...      \n",
-       "2523              DMSO\n",
-       "2524              DMSO\n",
-       "2525              DMSO\n",
-       "2526              DMSO\n",
-       "2527              DMSO\n",
-       "Name: Image_Metadata_Compound, Length: 2528, dtype: object"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DMSO 55 24\n",
+      "vincristine 3 28\n",
+      "AZ-C 3 28\n",
+      "AZ-A 3 24\n",
+      "AZ138 3 20\n",
+      "demecolcine 3 16\n",
+      "mitomycin C 3 16\n",
+      "taxol 3 12\n",
+      "emetine 3 12\n",
+      "AZ258 3 12\n",
+      "epothilone B 3 12\n",
+      "AZ-U 3 12\n",
+      "mevinolin/lovastatin 3 12\n",
+      "cyclohexamide 3 12\n",
+      "etoposide 3 12\n",
+      "simvastatin 3 12\n",
+      "camptothecin 3 12\n",
+      "AZ841 3 12\n",
+      "docetaxel 3 12\n",
+      "AZ-J 3 12\n",
+      "floxuridine 3 8\n",
+      "nocodazole 3 8\n",
+      "anisomycin 3 8\n",
+      "mitoxantrone 3 8\n",
+      "MG-132 3 8\n",
+      "proteasome inhibitor I 3 8\n",
+      "latrunculin B 3 8\n",
+      "ALLN 3 8\n",
+      "cytochalasin B 3 8\n",
+      "PD-169316 2 8\n",
+      "PP-2 2 8\n",
+      "alsterpaullone 2 8\n",
+      "colchicine 3 4\n",
+      "cisplatin 3 4\n",
+      "lactacystin 3 4\n",
+      "cytochalasin D 3 4\n",
+      "methotrexate 3 4\n",
+      "chlorambucil 3 4\n",
+      "bryostatin 2 4\n"
+     ]
     }
    ],
    "source": [
-    "Image[\"Image_Metadata_Compound\"]"
+    "for i in Image[\"Image_Metadata_Compound\"].value_counts().index:\n",
+    "    aa = meta[meta[\"Image_Metadata_Compound\"].str.contains(i)][\"Image_Metadata_Plate_DAPI\"].value_counts()\n",
+    "    print(i, len(aa), aa.values[0])"
    ]
   },
   {
@@ -403,6 +405,26 @@
    ],
    "source": [
     "meta#[\"TableNumber\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(454793, 479)"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Object.shape"
    ]
   },
   {
