--- a/Ljosa-profile/data_explore.ipynb
+++ b/Ljosa-profile/data_explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "[357 rows x 3 columns]"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -279,8 +279,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>TableNumber</th>\n",
-       "      <th>ImageNumber</th>\n",
        "      <th>Image_Metadata_Plate_DAPI</th>\n",
        "      <th>Image_Metadata_Well_DAPI</th>\n",
        "    </tr>\n",
@@ -288,123 +286,88 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>11</td>\n",
-       "      <td>Week1_22123</td>\n",
-       "      <td>B04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Week1_22123</td>\n",
-       "      <td>B04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Week1_22123</td>\n",
-       "      <td>B04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
        "      <td>Week1_22123</td>\n",
        "      <td>B04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>251</td>\n",
        "      <td>Week1_22141</td>\n",
        "      <td>B04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Week1_22161</td>\n",
+       "      <td>B04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Week1_22123</td>\n",
+       "      <td>B03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Week1_22141</td>\n",
+       "      <td>B03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2523</th>\n",
-       "      <td>9</td>\n",
-       "      <td>3560</td>\n",
+       "      <th>2508</th>\n",
+       "      <td>Week9_39301</td>\n",
+       "      <td>C02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2512</th>\n",
+       "      <td>Week9_39301</td>\n",
+       "      <td>D02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2516</th>\n",
+       "      <td>Week9_39301</td>\n",
+       "      <td>E11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2520</th>\n",
        "      <td>Week9_39301</td>\n",
        "      <td>F11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2524</th>\n",
-       "      <td>9</td>\n",
-       "      <td>3597</td>\n",
-       "      <td>Week9_39301</td>\n",
-       "      <td>G11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2525</th>\n",
-       "      <td>9</td>\n",
-       "      <td>3598</td>\n",
-       "      <td>Week9_39301</td>\n",
-       "      <td>G11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2526</th>\n",
-       "      <td>9</td>\n",
-       "      <td>3599</td>\n",
-       "      <td>Week9_39301</td>\n",
-       "      <td>G11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2527</th>\n",
-       "      <td>9</td>\n",
-       "      <td>3600</td>\n",
        "      <td>Week9_39301</td>\n",
        "      <td>G11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2528 rows × 4 columns</p>\n",
+       "<p>632 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      TableNumber  ImageNumber Image_Metadata_Plate_DAPI  \\\n",
-       "0               1           11               Week1_22123   \n",
-       "1               1           12               Week1_22123   \n",
-       "2               1            9               Week1_22123   \n",
-       "3               1           10               Week1_22123   \n",
-       "4               1          251               Week1_22141   \n",
-       "...           ...          ...                       ...   \n",
-       "2523            9         3560               Week9_39301   \n",
-       "2524            9         3597               Week9_39301   \n",
-       "2525            9         3598               Week9_39301   \n",
-       "2526            9         3599               Week9_39301   \n",
-       "2527            9         3600               Week9_39301   \n",
+       "     Image_Metadata_Plate_DAPI Image_Metadata_Well_DAPI\n",
+       "0                  Week1_22123                      B04\n",
+       "4                  Week1_22141                      B04\n",
+       "8                  Week1_22161                      B04\n",
+       "12                 Week1_22123                      B03\n",
+       "16                 Week1_22141                      B03\n",
+       "...                        ...                      ...\n",
+       "2508               Week9_39301                      C02\n",
+       "2512               Week9_39301                      D02\n",
+       "2516               Week9_39301                      E11\n",
+       "2520               Week9_39301                      F11\n",
+       "2524               Week9_39301                      G11\n",
        "\n",
-       "     Image_Metadata_Well_DAPI  \n",
-       "0                         B04  \n",
-       "1                         B04  \n",
-       "2                         B04  \n",
-       "3                         B04  \n",
-       "4                         B04  \n",
-       "...                       ...  \n",
-       "2523                      F11  \n",
-       "2524                      G11  \n",
-       "2525                      G11  \n",
-       "2526                      G11  \n",
-       "2527                      G11  \n",
-       "\n",
-       "[2528 rows x 4 columns]"
+       "[632 rows x 2 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "meta#[\"TableNumber\"]"
+    "meta[[\"Image_Metadata_Plate_DAPI\", \"Image_Metadata_Well_DAPI\"]].drop_duplicates()"
    ]
   },
   {
