--- a/baseline_exp.ipynb
+++ b/baseline_exp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,8 @@
     "\n",
     "from data_loader import data_label_split\n",
     "from data_loader import generate_data_set\n",
+    "from exp import z_score\n",
+    "from exp import mini_noise_signal_cv\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import cross_validate\n",
@@ -25,7 +27,11 @@
   {
    "cell_type": "code",
    "execution_count": 332,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def z_score(splits, X, y, model, control = 0, treatment = 1, verbose = 0):\n",
@@ -60,10 +66,14 @@
   {
    "cell_type": "code",
    "execution_count": 333,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
-    "def mini_noise_signal_cv(size, data, treatment, control, model, cv):\n",
+    "def mini_noise_signal_cv(size, data, treatment, control, model, cv, verbose):\n",
     "    mean_mean_accuracy=[]\n",
     "    std_mean_accuracy=[]\n",
     "    mean_z_score_control=[]\n",
@@ -73,17 +83,68 @@
     "    for i in range(5,96,5):\n",
     "        mini_batch = generate_data_set(size, i/100, data, treatment, control)\n",
     "        X, y = data_label_split(mini_batch)\n",
-    "        y = y[\"compound\"]\n",
+    "#         y = y[\"compound\"]\n",
     "#         lb = LabelEncoder()\n",
     "#         y_true = lb.fit_transform(y['compound']) # 0 for DMSO, 1 for taxol\n",
-    "        mean_accuracy, z_score_control, z_score_treatment = z_score(cv, X, y, model,\"DMSO\", \"taxol\", verbose = 1)\n",
+    "        mean_accuracy, z_score_control, z_score_treatment = z_score(cv, X, y, model,\"DMSO\", \"taxol\", verbose = verbose)\n",
     "        mean_mean_accuracy.append(np.mean(mean_accuracy))\n",
     "        std_mean_accuracy.append(np.std(mean_accuracy))\n",
     "        mean_z_score_control.append(np.mean(z_score_control))\n",
-    "        std_z_score_control.append(np.mean(z_score_control))\n",
+    "        std_z_score_control.append(np.std(z_score_control))\n",
     "        mean_z_score_treatment.append(np.mean(z_score_treatment))\n",
-    "        std_z_score_treatment.append(np.mean(z_score_treatment))\n",
+    "        std_z_score_treatment.append(np.std(z_score_treatment))\n",
     "    return mean_mean_accuracy, std_mean_accuracy, mean_z_score_control, std_z_score_control, mean_z_score_treatment, std_z_score_treatment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 354,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "generate_data_set() missing 5 required positional arguments: 'size', 'perc', 'data', 'treatment', and 'control'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-354-78f16243e150>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgenerate_data_set\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: generate_data_set() missing 5 required positional arguments: 'size', 'perc', 'data', 'treatment', and 'control'"
+     ]
+    }
+   ],
+   "source": [
+    "generate_data_set()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 356,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'generate_data_set' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-356-9404489b949f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mclf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmin_samples_split\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmean_mean_accuracy1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstd_mean_accuracy1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmean_z_score_control1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstd_z_score_control1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmean_z_score_treatment1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstd_z_score_treatment1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmini_noise_signal_cv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdrop_NA_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"taxol\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"DMSO\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/home/user/michigan/att_pooling/exp.py\u001b[0m in \u001b[0;36mmini_noise_signal_cv\u001b[0;34m(size, data, treatment, control, model, cv, verbose)\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mstd_z_score_control\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mmean_z_score_treatment\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mstd_z_score_treatment\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m96\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mmini_batch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerate_data_set\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtreatment\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcontrol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'generate_data_set' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "clf = RandomForestClassifier(min_samples_split=50, random_state=0)\n",
+    "mean_mean_accuracy1, std_mean_accuracy1, mean_z_score_control1, std_z_score_control1, mean_z_score_treatment1, std_z_score_treatment1 = mini_noise_signal_cv(2000, drop_NA_data, \"taxol\", \"DMSO\", clf, 10, 1) "
    ]
   },
   {
@@ -92,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model =  LogisticRegression(max_iter = 10000, solver = \"saga\", n_jobs = -1)"
+    "model = LogisticRegression(max_iter = 10000, solver = \"saga\", n_jobs = -1)"
    ]
   },
   {
@@ -132,11 +193,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 347,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0.5452536800835309,\n",
+       "  0.6468825288645144,\n",
+       "  0.6968707150683591,\n",
+       "  0.7584704636151313,\n",
+       "  0.7906592804602337,\n",
+       "  0.8190480543888186,\n",
+       "  0.8325958929915958,\n",
+       "  0.8599635065096083,\n",
+       "  0.8717453206142786,\n",
+       "  0.8756506244134805,\n",
+       "  0.8920039650849025,\n",
+       "  0.9056480121353447,\n",
+       "  0.9201502470018497,\n",
+       "  0.9255105010117752,\n",
+       "  0.9350536272354617,\n",
+       "  0.9439449919628901,\n",
+       "  0.9505914871041817,\n",
+       "  0.9579356768915275,\n",
+       "  0.9720773223657606],\n",
+       " [0.5452536800835309,\n",
+       "  0.6468825288645144,\n",
+       "  0.6968707150683591,\n",
+       "  0.7584704636151313,\n",
+       "  0.7906592804602337,\n",
+       "  0.8190480543888186,\n",
+       "  0.8325958929915958,\n",
+       "  0.8599635065096083,\n",
+       "  0.8717453206142786,\n",
+       "  0.8756506244134805,\n",
+       "  0.8920039650849025,\n",
+       "  0.9056480121353447,\n",
+       "  0.9201502470018497,\n",
+       "  0.9255105010117752,\n",
+       "  0.9350536272354617,\n",
+       "  0.9439449919628901,\n",
+       "  0.9505914871041817,\n",
+       "  0.9579356768915275,\n",
+       "  0.9720773223657606])"
+      ]
+     },
+     "execution_count": 347,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mean_mean_accuracy"
+    "mean_z_score_treatment1, std_z_score_treatment1"
    ]
   },
   {
