--- a/Ljosa-profile/data_explore.ipynb
+++ b/Ljosa-profile/data_explore.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# This notebook is used to view the meta of Ljosa's dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
