adding deepset and attset

--- a/Ljosa-profile/mean_set_model.ipynb
+++ b/Ljosa-profile/mean_set_model.ipynb
@@ -2159,7 +2159,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "drop_NA_data = pd.read_csv(\"moa_data_drop_NA.csv\", index_col=0)\n",
+    "X, y = data_label_split(drop_NA_data)\n",
+    "meta_drop = pd.concat([drop_NA_data[\"Metadata_PlateID_Nuclei\"], X.mean(axis=1) ,y],axis=1, sort=False)\n",
+    "def hist_plot(data, week):\n",
+    "    data = data[data[\"Metadata_PlateID_Nuclei\"]==week]\n",
+    "    ta_data = data[data[\"compound\"]==\"taxol\"]\n",
+    "    dm_data = data[data[\"compound\"]==\"DMSO\"]\n",
+    "    plt.hist([ta_data[ta_data[0]<400][0],dm_data[dm_data[0]<400][0]],bins = 80,  label=['taxol', 'DMSO'])\n",
+    "    axes = plt.gca()\n",
+    "    axes.set_xlim([0,250])\n",
+    "    plt.title(\"Mean profile at %s\"%week)\n",
+    "    plt.legend()\n",
+    "plt.figure(figsize=(18, 40))\n",
+    "for i,j in enumerate(meta_drop[\"Metadata_PlateID_Nuclei\"].value_counts().sort_index().index):\n",
+    "    plt.subplot(11,5,1+i)\n",
+    "    hist_plot(meta_drop, j)\n",
+    "plt.savefig(\"perweek_mean.png\")"
+   ]
   }
  ],
  "metadata": {
