--- a/base_debugger.ipynb
+++ b/base_debugger.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,9 @@
     "\n",
     "from data_loader import data_label_split\n",
     "from data_loader import generate_data_set\n",
-    "from exp import z_score\n",
-    "from exp import mini_noise_signal_cv\n",
-    "from exp import train\n",
+    "\n",
+    "from base_exp_multi_core import mini_noise_signal_cv\n",
+    "from base_exp_multi_core import train\n",
     "\n",
     "from sklearn import datasets\n",
     "from sklearn.model_selection import cross_validate\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,11 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rfc = GaussianProcessClassifier(1.0 * RBF(1.0))#LogisticRegression(max_iter = 10000, solver = \"saga\", n_jobs = -1)"
+    "rfc = MLPClassifier(alpha=1, max_iter=10000)#LogisticRegression(max_iter = 10000, solver = \"saga\", n_jobs = -1)"
    ]
   },
   {
@@ -74,7 +74,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  5%|▌         | 1/19 [23:51<7:09:35, 1431.95s/it]"
+      "K fold CV: 10it [15:40, 94.05s/it]\n",
+      "K fold CV: 10it [20:58, 125.83s/it]\n",
+      "K fold CV: 10it [22:55, 137.56s/it]\n",
+      "K fold CV: 10it [22:49, 136.90s/it]\n",
+      "K fold CV: 4it [19:55, 334.87s/it]"
      ]
     }
    ],
@@ -85,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
