--- a/base_debugger.ipynb
+++ b/base_debugger.ipynb
@@ -13,8 +13,10 @@
     "from data_loader import data_label_split\n",
     "from data_loader import generate_data_set\n",
     "\n",
-    "from base_exp_multi_core import mini_noise_signal_cv\n",
-    "from base_exp_multi_core import train\n",
+    "from base_exp import mini_noise_signal_cv\n",
+    "from base_exp import train\n",
+    "from base_exp import mini_noise_signal_cv\n",
+    "from base_exp import train\n",
     "\n",
     "from sklearn import datasets\n",
     "from sklearn.model_selection import cross_validate\n",
@@ -47,6 +49,15 @@
    "outputs": [],
    "source": [
     "drop_NA_data=pd.read_csv(\"moa_data_drop_NA.csv\", index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "week1_data = pd.read_csv(\"week1_full_data.csv\", index_col=0)"
    ]
   },
   {
